# genseq

./: .gitignore  .gitmodules  CMakeLists.txt  README.org  launch.json
app/: CMakeLists.txt  main.cpp
include/genseq/: Gendhing.hpp  Instrument.hpp  NotationReader.hpp  Render.hpp  Sequencer.hpp
include/genseq/Instruments/: Bonang.hpp  Instruments.hpp  Kempul.hpp  Kenong.hpp  Saron.hpp
output/Asmarandana/midi/: bonang.mid  kempul.mid  kenong.mid  saron.mid
output/Ngeksiganda/midi/: bonang.mid  kempul.mid  kenong.mid  saron.mid
output/Pelog/midi/: bonang.mid  kenong.mid  saron.mid
output/Sedya Asih/midi/: bonang.mid  kempul.mid  kenong.mid  saron.mid
output/Slendro/midi/: kempul.mid  kenong.mid  saron.mid
src/: CMakeLists.txt  Instrument.cpp  NotationReader.cpp  Render.cpp  Sequencer.cpp
